Fixed bug with search bar jumping to new line when width of screen was less than 869px

--- a/css/viewFrameworks.css
+++ b/css/viewFrameworks.css
@@ -30,7 +30,7 @@
     border: none;
     background-color: transparent;
     color: inherit;
-    width: calc(99% - 37px);
+    width: calc(100% - 50px);
     height: 1.6rem;
     margin: 0px;
     padding: 0px;
